# video_run_string

./: .gitignore  README.md
django_project/: README.md  pyproject.toml  requirements.txt
django_project/test_task/: .env_template
django_project/test_task/test_task/: settings.py  urls.py
django_project/test_task/video/: admin.py  models.py  urls.py  utils.py  views.py
django_project/test_task/video/migrations/: 0001_initial.py  0002_alter_videofile_file_alter_videofile_run_string_and_more.py
django_project/test_task/video/templates/video/: base.html  videofile_confirm_delete.html  videofile_detail.html  videofile_form.html  videofile_list.html
script/: README.md  main.py  pyproject.toml
