[tool.poetry]
name = "video-run-string-django-project"
version = "0.1.1"
description = ""
authors = ["Alexey Inkov <alex0982@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.9"
Django = "4.2"
pytils = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
